tests/compile-fail/integration_suite__integration__type_check__return__missing_from_void.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:25:9
   │
25 │         inline void foo() { }
   │         ^^^^^^^^^^^^^^^^^^^^^ not supported by ANM files


